--- a/postcss/_region.header.css
+++ b/postcss/_region.header.css
@@ -26,6 +26,6 @@ $breakpoint-tablet-portrait {
 }
 
 $breakpoint-mobile {
-	.header .logo { width: 270px; height: 30px; right: 150px; position: absolute; top: 35px; }
+	.header .logo { width: 270px; height: 30px; position: relative; top: 7px; right: 12%;}
 	.header .shell { min-height: 39px; }
 }
